[base apparel] fixed alignment of left col

--- a/Challenge-11-base-apparel-coming-soon/index.css
+++ b/Challenge-11-base-apparel-coming-soon/index.css
@@ -24,10 +24,10 @@
 body {
     background: var(--bg-gradient);
     display: flex;
-    /* justify-content: center; */
-    align-items: center;
+    /* justify-content: space-around; */
+    /* align-content: center; */
     /* height: 100vh; */
-    /* width: 100vw; */
+    width: 100vw;
     /* gap:220px; */
 }
 
@@ -68,7 +68,7 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-left: 200px;
+    padding-left: 25%;
     /* align-items: center; */
     background: url('images/top-left-bg.svg') no-repeat top right 100%, url('images/bottom-right-bg.svg') no-repeat bottom right;
     height: 100vh;
